Changed section positions

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <div class="posts-container">
       <div class="posts-title">
-        Some section of posts
+        My projects:
       </div>
 
       <div class="posts-item">
